more fix for overflow

--- a/docs/css/styles/messages.css
+++ b/docs/css/styles/messages.css
@@ -48,7 +48,7 @@ body {
 .message-text {
     margin-bottom: 0.3rem;
     box-sizing: border-box;
-    overflow-wrap: break-word;
+    overflow: scroll;
 }
 .btn {
     width: 100%;
